Icon collapse and padding issue resolved

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 }
 .navscroll{
-    background-color: black;
+    background-color:black;
 }
 .blockwidth{
     align-content: center;
@@ -141,6 +141,9 @@
     color: #7a7ffb;
     font-size: 15px;
 }
+.blackicon{
+    color: black;
+}
 .statsblock{
  
     justify-content: space-between;
@@ -168,15 +171,16 @@
     /* width: 100%;
     height: 100%; */
     margin-left: 7px;
-    margin-top: 5px;
+    margin-top: 8px;
     border-radius: 3px;
 }
 .statsformaltext{
     padding-left: 5px;
-    padding-top: 3px;
+    padding-top: 5px;
     font-family: sans-serif;
     font-size: 11px;
     color: gray;
+    padding-bottom: 13px;
 }
 .progresstitle{
     padding-left: 5px;
@@ -187,7 +191,7 @@
 }
 .statsformaltextbold{
     padding-left: 5px;
-    padding-top: 3px;
+    padding-top: 6px;
     font-family: sans-serif;
     font-size: 15px;
     color: black;
